<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Misc Strings -->
    <string name="full_app_name">SBGSoft Virtual SongBook</string>
    <string name="app_name">Virtual SongBook</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort By:</string>
    <string name="content_description">content_desc</string>
    <string name="logo_content_description">Truth Gaming Logo</string>

    <!-- Open File Strings -->
    <string name="title_activity_open_file">Select A File&#8230;</string>
    <string name="title_activity_open_folder">Select A Folder&#8230;</string>
    <string name="open_file_empty">This Folder is Empty</string>
    <string name="file_type">File Type:</string>
    <string name="select_folder">Select Folder</string>

    <!-- Song Strings -->
    <string name="add_song_name">Song Name (must be unique):</string>
    <string name="add_song_author">Artist Name*:</string>
    <string name="add_song_key">Song Key*:</string>
    <string name="add_song_subnote">*These may be left empty&#160;</string>
    <string name="songs_row_key_text">Key:&#160;</string>
    <string name="songs_row_author_text">Artist:&#160;</string>
    <string name="title_songs">Songs</string>
    <string name="no_songs">No Songs Currently Exist For This Group</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="empty_song">This song is empty, edit it to add lyrics and chords</string>
    <string name="song_edit_save">Save Song</string>
    <string name="title_activity_edit_song">Edit Song</string>
    <string name="transpose_button">Transpose</string>
    <string name="font_arrows">Font Size</string>
    <string name="up_arrow">Up Arrow</string>
    <string name="down_arrow">Down Arrow</string>
    <string name="song_group">Song Group:</string>

    <!-- Set Strings -->
    <string name="no_sets">No Sets Currently Exist For This Group</string>
    <string name="empty_current">This Set is Empty</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="set_edit_save">Save Set</string>
    <string name="title_sets">Sets</string>
    <string name="title_current_set">Current Set</string>
    <string name="sets_row_date_text">Date:&#160;</string>
    <string name="add_set_name">Set Name (must be unique):</string>
    <string name="add_set_date">Set Date:</string>
    <string name="set_group">Set Group:</string>

    <!-- Menu Strings -->
    <string name="menu_song_groups_create">Create Song Group</string>
    <string name="menu_song_groups_delete_all">Delete All Song Groups</string>
    <string name="menu_song_groups_delete">Delete Song Group&#8230;</string>
    <string name="menu_set_groups">Set Groups&#8230;</string>
    <string name="menu_set_groups_create">Create Set Group</string>
    <string name="menu_set_groups_delete_all">Delete All Set Groups</string>
    <string name="menu_set_groups_delete">Delete Set Group&#8230;</string>
    <string name="menu_sets">Sets&#8230;</string>
    <string name="menu_sets_create">Create Set</string>
    <string name="menu_sets_find">Find Set</string>
    <string name="menu_songs">Songs&#8230;</string>
    <string name="menu_songs_create">Create Song</string>
    <string name="menu_songs_import">Import Song</string>
    <string name="menu_songs_find">Find Song</string>
    <string name="menu_sets_clear">Delete All Sets</string>
    <string name="menu_songs_clear">Delete All Songs</string>
    <string name="menu_song_groups">Song Groups&#8230;</string>
    <string name="menu_backup">Backup&#8230;</string>
    <string name="menu_backup_import">Import</string>
    <string name="menu_backup_export">Export</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About SongBook</string>

    <!-- Context Menu Strings -->
    <string name="cmenu_songs_delete">Delete Song</string>
    <string name="cmenu_songs_edit">Edit Song</string>
    <string name="cmenu_songs_edit_att">Edit Song Attributes</string>
    <string name="cmenu_songs_share">Share Song&#8230;</string>
    <string name="cmenu_songs_share_email">Email as Plain Text</string>
    <string name="cmenu_songs_share_email_cp">Email as ChordPro</string>
    <string name="cmenu_songs_share_email_pdf">Email as PDF</string>
    <string name="cmenu_songs_share_save">Save as Plain Text</string>
    <string name="cmenu_songs_share_save_cp">Save as ChordPro</string>
    <string name="cmenu_songs_share_save_pdf">Save as PDF</string>
    <string name="cmenu_sets_set_song_key">Change Song Key For Set</string>
    <string name="cmenu_sets_delete">Delete Set</string>
    <string name="cmenu_sets_edit">Edit Set Songs</string>
    <string name="cmenu_sets_edit_att">Edit Set Attributes</string>
    <string name="cmenu_sets_email">Email Set</string>
    <string name="cmenu_sets_reorder">Reorder Set</string>
    <string name="cmenu_song_add_set">Add Song To Set&#8230;</string>
    <string name="cmenu_song_add_curr_set">Add Song To Current Set</string>
    <string name="cmenu_song_group_add">Add Song To Group&#8230;</string>
    <string name="cmenu_song_group_delete">Remove Song From Group</string>
    <string name="cmenu_set_group_add">Add Set To Group&#8230;</string>
    <string name="cmenu_set_group_delete">Remove Set From Group</string>
    <string name="cmenu_sets_remove_song">Remove Song From Set</string>
    <string name="cmenu_songs_stats">Song Stats</string>
    <string name="title_activity_logo">Logo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>