<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" android:enabled="false"/>
    <item android:id="@+id/menu_sets" android:menuCategory="container" android:title="@string/menu_sets">
        <menu>
            <item android:id="@+id/menu_sets_create" android:title="@string/menu_sets_create"/>
            <item android:id="@+id/menu_sets_find" android:enabled="false" android:title="@string/menu_sets_find"/>
            <item android:id="@+id/menu_sets_clear" android:title="@string/menu_sets_clear"/>
        </menu>
    </item>
    <item android:id="@+id/menu_songs" android:menuCategory="container" android:title="@string/menu_songs">
        <menu>
            <item android:id="@+id/menu_songs_create" android:title="@string/menu_songs_create" android:enabled="true"/>
            <item android:id="@+id/menu_songs_import" android:title="@string/menu_songs_import" android:enabled="true"/>
            <item android:id="@+id/menu_songs_find" android:title="@string/menu_songs_find" android:enabled="false"/>
            <item android:id="@+id/menu_songs_clear" android:title="@string/menu_songs_clear" android:enabled="true"/>
        </menu>
    </item>
    <item android:id="@+id/menu_groups" android:title="@string/menu_groups">
        <menu>
            <item android:id="@+id/menu_groups_create" android:title="@string/menu_groups_create" android:enabled="true"/>
            <item android:id="@+id/menu_groups_delete" android:title="@string/menu_groups_delete" android:enabled="true"/>
            <item android:id="@+id/menu_groups_delete_all" android:enabled="true" android:title="@string/menu_groups_delete_all"/>
        </menu>
    </item>
</menu>
