<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/song_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/empty_song"
        android:textColor="#000000"
        android:typeface="monospace"
        android:background="#FFFFFF"
        android:textSize="20dp"
        tools:context=".SongActivity" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/up_arrow"
        android:onClick="incFontSize"
        android:src="@android:drawable/arrow_up_float" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageButton1"
        android:paddingRight="3dp"
        android:text="@string/font_arrows"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:contentDescription="@string/down_arrow"
        android:onClick="decFontSize"
        android:src="@android:drawable/arrow_down_float" />

</RelativeLayout>
